--- a/login.html
+++ b/login.html
@@ -272,7 +272,7 @@
                     const data = await res.json();
                     alert('Login successful!');
                     // Redirect to admin page or another page
-                    window.location.href = '/puppeteer tutorial/admin.html';
+                    window.location.href = 'admin.html';
 
                 } else {
                     const errData = await res.json();
