--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
   // Fetch and display products for each category
        async function fetchProducts(category, containerId) {
         try {
-            const response = await fetch(`http://localhost:3000/products?table=${category}`);
+           const response = await fetch(`https://dbfuk.onrender.com/products?table=${category}`);
             const products = await response.json();
             const container = document.getElementById(containerId);
 
@@ -406,7 +406,7 @@
 	
     async function loadPosts() {
     try {
-        const res = await fetch('http://localhost:3000/api/posts');
+        const res = await fetch('https://dbfuk.onrender.com/api/posts');
         const posts = await res.json();
         const container = document.getElementById('posts');
         container.innerHTML = ''; // Clear loading text
@@ -459,4 +459,5 @@ loadPosts();
 
 	</body>
 </html>
+
 
