--- a/trials.html
+++ b/trials.html
@@ -347,7 +347,7 @@
             // Fetch Products and display them
             async function fetchProducts() {
                 try {
-                    const response = await fetch('http://localhost:3000/products');
+                    const response = await fetch('https://dbfuk.onrender.com/products');
                     const products = await response.json();
                     const container = document.getElementById('product-container');
         
@@ -387,3 +387,4 @@
 
 	</body>
 </html>
+
